--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,6 +4,7 @@
   padding: 0px;
   font-weight: normal;
   box-sizing: border-box;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 
